# iree

./: .gitmodules  BUILD.bazel  WORKSPACE.bzlmod
build_tools/bazel/: build_defs.oss.bzl  cts_test_gen.bzl  iree.bazelrc  iree_amdgpu_binary.bzl  iree_bitcode_library.bzl  iree_copy_to_path.bzl  iree_flatcc.bzl  iree_hal_cts_test_suite.bzl  workspace.bzl  workspace_root.bzl
compiler/: setup.py
compiler/bindings/c/: BUILD.bazel
compiler/bindings/python/: BUILD.bazel
compiler/bindings/python/iree/compiler/: __init__.py
compiler/plugins/: iree_compiler_plugin.cmake
compiler/plugins/input/StableHLO/Conversion/: CHLODecompositionPatterns.td  LegalizeCHLO.cpp
compiler/plugins/input/StableHLO/Conversion/Preprocessing/: ComplexLoweringPatterns.td  LowerComplex.cpp
compiler/plugins/input/TOSA/: PluginRegistration.cpp
compiler/plugins/input/TOSA/InputConversion/: BUILD.bazel  Passes.cpp  Passes.h
compiler/plugins/input/Torch/: BUILD.bazel  PluginRegistration.cpp
compiler/plugins/input/Torch/InputConversion/: BUILD.bazel  FuncConversion.cpp  Passes.cpp  Passes.h  Passes.td
compiler/plugins/input/Torch/InputConversion/test/: BUILD.bazel  CMakeLists.txt  auto_input_conversion.mlir  func_conversion.mlir  func_conversion_invalid.mlir  torch_to_iree.mlir
compiler/src/iree/compiler/API/: BUILD.bazel  api_exports.c  api_exports.def  api_exports.ld  api_exports.macos.lst  generate_exports.py
compiler/src/iree/compiler/API/Internal/: BUILD.bazel  CMakeLists.txt  CompilerDriver.cpp
compiler/src/iree/compiler/Codegen/Common/: BlockDynamicDimensions.cpp  MaterializeEncoding.cpp  RematerializeParallelOps.cpp
compiler/src/iree/compiler/Codegen/Common/test/: materialize_encoding_x86_64.mlir
compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/: IREECodegenAttrs.td
compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/: IREEGPUAttrs.td
compiler/src/iree/compiler/Codegen/Dialect/GPU/TargetUtils/: KnownTargets.cpp
compiler/src/iree/compiler/Codegen/ExternalInterfaces/: BUILD.bazel  CMakeLists.txt
compiler/src/iree/compiler/Codegen/LLVMCPU/: KernelDispatch.cpp  LLVMCPUTileAndFuse.cpp  Passes.cpp
compiler/src/iree/compiler/Codegen/LLVMCPU/test/: hal_target_device_attributes.mlir
compiler/src/iree/compiler/Codegen/LLVMGPU/: KernelConfig.cpp
compiler/src/iree/compiler/Codegen/LLVMGPU/Utils/: BUILD.bazel
compiler/src/iree/compiler/Codegen/LLVMGPU/test/: gpu_set_num_workgroups.mlir
compiler/src/iree/compiler/Codegen/SPIRV/: BUILD.bazel  CMakeLists.txt  ConvertToSPIRVPass.cpp  KernelConfig.cpp  KernelConfig.h  SPIRVConvertGPUTarget.cpp  VideoCoreConfig.cpp
compiler/src/iree/compiler/Codegen/SPIRV/test/: BUILD.bazel  CMakeLists.txt  config_broadcom_conv.mlir  config_broadcom_matmul.mlir
compiler/src/iree/compiler/Codegen/Utils/: GPUUtils.cpp  Utils.cpp  Utils.h
compiler/src/iree/compiler/Dialect/Flow/IR/: FlowOpFolders.cpp
compiler/src/iree/compiler/Dialect/Flow/IR/test/: tensor_folding.mlir
compiler/src/iree/compiler/Dialect/Flow/Transforms/: Passes.cpp  RegionOpUtils.cpp
compiler/src/iree/compiler/Dialect/HAL/Conversion/StreamToHAL/: Utils.cpp
compiler/src/iree/compiler/Dialect/HAL/IR/: HALAttrs.cpp
compiler/src/iree/compiler/Dialect/HAL/IR/test/: attributes.mlir
compiler/src/iree/compiler/Dialect/HAL/Transforms/test/: assign_legacy_target_devices.mlir
compiler/src/iree/compiler/Dialect/LinalgExt/IR/: LinalgExtOps.cpp  LinalgExtOps.td  TilingInterfaceImpl.cpp
compiler/src/iree/compiler/Dialect/Stream/IR/: StreamInterfaces.td
compiler/src/iree/compiler/Dialect/Stream/Transforms/: BUILD.bazel  CMakeLists.txt  Passes.cpp  Passes.td
compiler/src/iree/compiler/Dialect/Stream/Transforms/test/: BUILD.bazel  (+1 more)
compiler/src/iree/compiler/Dialect/Util/Transforms/: Passes.td
compiler/src/iree/compiler/Dialect/VMVX/Transforms/: ResolveBufferDescriptors.cpp
compiler/src/iree/compiler/DispatchCreation/: FormDispatchRegions.cpp  Passes.cpp  SplitReduction.cpp
compiler/src/iree/compiler/DispatchCreation/test/: BUILD.bazel  CMakeLists.txt  attention_fuse_by_expansion.mlir  clone_producers_into_dispatch_regions.mlir  dispatch_linalg_on_tensors.mlir
compiler/src/iree/compiler/GlobalOptimization/: RaiseSpecialOps.cpp
compiler/src/iree/compiler/PluginAPI/Config/: BUILD.bazel
compiler/src/iree/compiler/Tools/: init_mlir_dialects.h  init_mlir_passes.h
compiler/src/iree/compiler/Utils/: BUILD.bazel
lib/: BUILD.bazel
runtime/: BUILD.bazel  setup.py
runtime/bindings/python/: BUILD  BUILD.bazel  hal.cc  hal.h  status_utils.h
runtime/bindings/python/iree/runtime/: __init__.py  _binding.pyi  array_interop.py
runtime/bindings/python/tests/: hal_test.py
runtime/src/iree/hal/: buffer.c  device.c  device.h  semaphore.c  string_util.c
runtime/src/iree/hal/cts/: BUILD.bazel  CMakeLists.txt  cts_test_suite.bzl  driver_test.h  empty_executables.h  external_timepoint_test.h  process_cts_template.py
runtime/src/iree/hal/cts/testdata/: BUILD.bazel
runtime/src/iree/hal/drivers/: BUILD.bazel
runtime/src/iree/hal/drivers/amdgpu/util/: BUILD.bazel  CMakeLists.txt
runtime/src/iree/hal/drivers/cuda/: BUILD.bazel  cuda_allocator.c  cuda_device.c
runtime/src/iree/hal/drivers/cuda/cts/: BUILD.bazel
runtime/src/iree/hal/drivers/hip/: hip_device.c
runtime/src/iree/hal/drivers/local_sync/: BUILD.bazel  sync_device.c
runtime/src/iree/hal/drivers/local_task/: BUILD.bazel  task_device.c  task_semaphore.c
runtime/src/iree/hal/drivers/local_task/cts/: BUILD.bazel
runtime/src/iree/hal/drivers/metal/: metal_device.m  shared_event.m
runtime/src/iree/hal/drivers/vulkan/: BUILD.bazel  extensibility_util.h  handle_util.h  native_semaphore.cc  native_semaphore.h  timepoint_bridge.cc  timepoint_bridge.h  timepoint_bridge_test.cc  vulkan_device.cc
runtime/src/iree/hal/utils/: BUILD.bazel  CMakeLists.txt  external_timepoint_poller.c  external_timepoint_poller.h
runtime/src/iree/modules/check/test/: BUILD.bazel  CMakeLists.txt
runtime/src/iree/modules/hal/: debugging.c
runtime/src/iree/task/: BUILD.bazel
samples/custom_dispatch/: CMakeLists.txt
(+2 files in other folders)
