# Copyright 2023 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_cc_binary")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

# Switch link options on mac OS
config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//os:osx",
    ],
)

iree_compiler_cc_binary(
    name = "libIREECompiler.so",
    srcs = [
        "//compiler/src/iree/compiler/API:api_exports.c",
    ],
    linkopts = select({
        "//conditions:default": [
            "-Wl,--version-script=$(location //compiler/src/iree/compiler/API:api_exports.ld)",
            "-Wl,--no-undefined",
        ],
        ":macos": [
            "-Wl,-exported_symbols_list $(location //compiler/src/iree/compiler/API:api_exports.macos.ld)",
        ],
    }),
    linkshared = 1,
    deps = [
        "//compiler/bindings/c:headers",
        "//compiler/src/iree/compiler/API:StaticImpl",
    ] + select({
        "//conditions:default": [
            "//compiler/src/iree/compiler/API:api_exports.ld",
        ],
        ":macos": [
            "//compiler/src/iree/compiler/API:api_exports.macos.ld",
        ],
    }),
)
