load("@iree//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_cc_library", "iree_compiler_register_plugin")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_compiler_register_plugin(
    plugin_id = "input_torch",
    target = ":registration",
)

iree_compiler_cc_library(
    name = "registration",
    srcs = [
        "PluginRegistration.cpp",
    ],
    deps = [
        "//compiler/plugins/input/Torch/InputConversion",
        "@iree//compiler/src/iree/compiler/Dialect/Flow/IR",
        "@iree//compiler/src/iree/compiler/Dialect/HAL/IR",
        "@iree//compiler/src/iree/compiler/Dialect/LinalgExt/IR",
        "@iree//compiler/src/iree/compiler/Dialect/Stream/IR",
        "@iree//compiler/src/iree/compiler/Dialect/Util/IR",
        "@iree//compiler/src/iree/compiler/PluginAPI",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:MLProgramDialect",
        "@llvm-project//mlir:Pass",
        "@torch-mlir//:TorchMLIRConversionPasses",
        "@torch-mlir//:TorchMLIRTMTensorDialect",
        "@torch-mlir//:TorchMLIRTorchConversionDialect",
        "@torch-mlir//:TorchMLIRTorchConversionPasses",
        "@torch-mlir//:TorchMLIRTorchDialect",
        "@torch-mlir//:TorchMLIRTorchOnnxToTorch",
    ],
)
