load("@iree//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_cc_library", "iree_gentbl_cc_library", "iree_tablegen_doc", "iree_td_library")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_td_library(
    name = "td_files",
    srcs = ["Passes.td"],
    deps = ["@llvm-project//mlir:PassBaseTdFiles"],
)

iree_gentbl_cc_library(
    name = "PassesIncGen",
    tbl_outs = [
        (
            ["--gen-pass-decls"],
            "Passes.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "Passes.td",
    deps = [":td_files"],
)

iree_compiler_cc_library(
    name = "InputConversion",
    srcs = [
        "BindSymbolicShapes.cpp",
        "BitCastQuantTensor.cpp",
        "ConvertTMTensorToLinalgExt.cpp",
        "FuncConversion.cpp",
        "Passes.cpp",
        "SetStrictSymbolicShapes.cpp",
    ],
    hdrs = [
        "Passes.h",
        "Passes.h.inc",
    ],
    deps = [
        ":PassesIncGen",
        "@iree//compiler/src/iree/compiler/Dialect/Flow/IR",
        "@iree//compiler/src/iree/compiler/Dialect/HAL/IR",
        "@iree//compiler/src/iree/compiler/Dialect/LinalgExt/IR",
        "@iree//compiler/src/iree/compiler/Dialect/Stream/IR",
        "@iree//compiler/src/iree/compiler/Dialect/Util/IR",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:FuncTransforms",
        "@llvm-project//mlir:FunctionInterfaces",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:MathDialect",
        "@llvm-project//mlir:MemRefTransforms",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:TensorDialect",
        "@llvm-project//mlir:TransformUtils",
        "@llvm-project//mlir:Transforms",
        "@torch-mlir//:TorchMLIRConversionPasses",
        "@torch-mlir//:TorchMLIRTMTensorDialect",
        "@torch-mlir//:TorchMLIRTorchConversionDialect",
        "@torch-mlir//:TorchMLIRTorchConversionPasses",
        "@torch-mlir//:TorchMLIRTorchConversionToMLProgram",
        "@torch-mlir//:TorchMLIRTorchDialect",
        "@torch-mlir//:TorchMLIRTorchPasses",
        "@torch-mlir//:TorchMLIRTorchToArith",
        "@torch-mlir//:TorchMLIRTorchToLinalg",
        "@torch-mlir//:TorchMLIRTorchToSCF",
        "@torch-mlir//:TorchMLIRTorchToTMTensor",
        "@torch-mlir//:TorchMLIRTorchToTensor",
    ],
)
